# DPG

./: .gitignore  NUMERICAL_BIAS_ANALYSIS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml  telegram-on-commit.yml
counterfactual/: README.md  __init__.py  constraint_parser.py  constraint_scorer.py  counterfactual_visualizer.py
counterfactual/configs/: config.yaml
counterfactual/configs/iris/: config.yaml
counterfactual/notebooks/: run_comparison_by_id.ipynb
counterfactual/scripts/: analyze_run_yv2ab6ib.py  export_comparison_results.py  export_iris_communities.py  run_constraint_extraction.py  run_experiment.py  tune_random_forest.py
counterfactual/utils/: config_manager.py  dataset_loader.py  experiment_status.py  replication_runner.py
docs/: README.md  api_reference.md  conf.py  index.md  quickstart.md  requirements.txt
docs/_static/: custom.css
dpg/: __init__.py  core.py  explainer.py  visualizer.py
examples/: quickstart.py  quickstart_v2.py  run_dpg_custom.py  run_dpg_standard.py
metrics/: graph.py
tests/: test_dpg_core.py  test_explainer.py  test_metrics.py  test_sklearn_dpg.py  test_smoke.py  test_visualizations_api.py
tutorials/: iris_dpg_notebook.ipynb  saga_benchmarks_wine.ipynb  saga_benchmarks_wine.md
tutorials/saga_breast_cancer/: saga_benchmarks_breast_cancer.ipynb  saga_benchmarks_breast_cancer.md
tutorials/saga_wine/: saga_benchmarks_wine.ipynb  saga_benchmarks_wine.md
