[tool.poetry]
name = "dpg"
version = "0.1.5"
description = "A Python library for extracting Decision Predicate Graphs and global explanations from ensemble models."
authors = ["Sylvio Barbon Junior <sylvio.barbonjunior@units.it>", "Leonardo Arrighi <leonardo.arrighi@phd.units.it>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Meta-Group/DPG"
repository = "https://github.com/Meta-Group/DPG"
keywords = ["decision graph", "ensemble learning", "explainable ai", "explainability", "global explanations"]
packages = [
    { include = "dpg" },
    { include = "metrics" },
    { include = "counterfactual" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[tool.poetry.dependencies]
python = ">=3.10"

contourpy = "1.2.1"
cycler = "0.12.1"
fonttools = "4.53.1"
graphviz = "0.20.3"
joblib = "1.4.2"
kiwisolver = "1.4.5"
matplotlib = ">= 3.9.2"
networkx = "3.3"
numpy = ">= 2.0.0"
packaging = "24.1"
pandas = "2.2.2"
pillow = "10.4.0"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
pytz = "2024.1"
scikit-learn = "1.5.1"
scipy = ">= 1.14.0"
six = "1.16.0"
threadpoolctl = "3.5.0"
tqdm = "4.67.1"
tzdata = "2024.1"
pyyaml = "^6.0.2"

# -- optional docs dependencies (pip install ".[docs]") --
sphinx = {version = ">=7.3", optional = true}
pydata-sphinx-theme = {version = ">=0.15", optional = true}
sphinx-autoapi = {version = ">=3.1", optional = true}
myst-parser = {version = ">=3.0", optional = true}
sphinx-copybutton = {version = ">=0.5", optional = true}
myst-nb = {version = ">=1.1", optional = true}
sphinx-design = {version = ">=0.6", optional = true}

[tool.poetry.extras]
dev = ["pytest"]
docs = ["sphinx", "pydata-sphinx-theme", "sphinx-autoapi", "myst-parser", "sphinx-copybutton", "myst-nb", "sphinx-design"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
mypy = ">=1.9"
types-PyYAML = ">=6.0"
types-seaborn = "*"
pandas-stubs = "*"
matplotlib-stubs = "*"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.3"
pydata-sphinx-theme = ">=0.15"
sphinx-autoapi = ">=3.1"
myst-parser = ">=3.0"
sphinx-copybutton = ">=0.5"
myst-nb = ">=1.1"
sphinx-design = ">=0.6"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
pretty = true
show_error_codes = true
# Ignore third-party libraries that don't ship stubs
[[tool.mypy.overrides]]
module = [
    "graphviz.*",
    "networkx.*",
    "sklearn.*",
    "joblib.*",
    "tqdm.*",
    "scipy.*",
    "omegaconf.*",
    "PIL.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dpg = "scripts.run_dpg_standard:main"
